...
    <!-- IntroActivity -->
    <string name="intro_slogan1">Your data. Your choice.</string>
    <string name="intro_slogan2">Take control.</string>
    <string name="intro_battery_title">Regular sync intervals</string>
    <string name="intro_battery_text">For synchronization at regular intervals, %s must be allowed to run in the background. Otherwise, Android may pause synchronization at any time.</string>
...
    <string name="about_libraries">Libraries</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <string name="about_copyright">© Ricki Hirner, Bernhard Stockmann (bitfire web engineering GmbH) and contributors</string>
    <string name="about_license_info_no_warranty">This program comes with ABSOLUTELY NO WARRANTY. It is free software, and you are welcome to redistribute it under certain conditions.</string>

...
    <!-- AccountsScreen -->
    <string name="navigation_drawer_subtitle">CalDAV/CardDAV Sync Adapter</string>
    <string name="navigation_drawer_about">About / License</string>
    <string name="navigation_drawer_beta_feedback">Beta feedback</string>
    <string name="install_browser">Please install a Web browser</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_news_updates">News &amp; updates</string>
    <string name="navigation_drawer_tools">Tools</string>
    <string name="navigation_drawer_external_links">External links</string>
    <string name="navigation_drawer_website">Web site</string>
    <string name="navigation_drawer_manual">Manual</string>
    <string name="navigation_drawer_faq">FAQ</string>
...
    <string name="navigation_drawer_privacy_policy">Privacy policy</string>
    <string name="account_list_welcome">Welcome to DAVx⁵!</string>
    <string name="account_list_empty">Connect to your server and keep your calendars and contacts synchronized.</string>
    <string name="accounts_sync_all">Sync all accounts</string>

...
    <string name="app_settings">Settings</string>
    <string name="app_settings_debug">Debugging</string>
    <string name="app_settings_show_debug_info">Show debug info</string>
    <string name="app_settings_show_debug_info_details">View/share configuration details and logs</string>
    <string name="app_settings_logging">Verbose logging</string>
...
    <string name="account_rename_exists_already">Account name already taken</string>
    <string name="account_rename_couldnt_rename">Couldn\'t rename account</string>
    <string name="account_delete">Delete account</string>
    <string name="account_delete_confirmation_title">Really delete account?</string>
    <string name="account_delete_confirmation_text">All local copies of address books, calendars and task lists will be deleted.</string>
    <string name="account_synchronize_this_collection">synchronize this collection</string>
...
    <string name="login_password_show">Show password</string>
    <string name="login_password_optional">Password (optional)</string>
    <string name="login_type_url">Login with URL and user name</string>
    <string name="login_user_name">User name</string>
    <string name="login_user_name_optional">User name (optional)</string>
...
    <string name="login_account_name">Account name</string>
    <string name="login_account_avoid_apostrophe">Usage of apostrophes (\') seems to cause problems on some devices.</string>
    <string name="login_account_name_info">Use your email address as account name because Android will use the account name as ORGANIZER field for events you create. You can\'t have two accounts with the same name.</string>
    <string name="login_account_contact_group_method">Contact group method:</string>
    <string name="login_account_name_required">Account name required</string>
...
