...
                        android:layout_height="wrap_content"
                        android:hint="@string/login_base_url"
                        app:error="@{model.baseUrlError}"
                        app:errorEnabled="true">
                        <!--suppress AndroidUnknownAttribute -->
                        <AutoCompleteTextView
                            android:id="@+id/loginUrlBaseUrlEdittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{model::clearUrlError}"
                            android:inputType="textUri"
                            android:text="@={model.baseUrl}" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:layout_height="wrap_content"
                        android:hint="@string/login_user_name"
                        app:error="@{model.usernameError}"
                        app:errorEnabled="true">
                        <!--suppress AndroidUnknownAttribute -->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/loginUrlUsernameEdittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{model::clearUsernameError}"
                            android:autofillHints="username"
                            android:inputType="textEmailAddress"
                            android:text="@={model.username}"
...
                        android:hint="@string/login_password"
                        app:endIconMode="password_toggle"
                        app:error="@{model.passwordError}"
                        app:errorEnabled="true">
                        <!--suppress AndroidUnknownAttribute -->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/loginUrlPasswordEdittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{model::clearPasswordError}"
                            android:autofillHints="password"
                            android:fontFamily="monospace"
                            android:inputType="textPassword"
...
        <androidx.cardview.widget.CardView
            style="@style/stepper_nav_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/login_login" />

...
