...
                    android:hint="@string/login_account_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    app:errorEnabled="true"
                    app:error="@{details.nameError}">
                    <!--suppress AndroidUnknownAttribute -->
                    <AutoCompleteTextView
                        android:id="@+id/accountName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        unfilteredText="@={details.name}"
                        android:afterTextChanged="@{details::validateAccountName}"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
...
                android:visibility="gone"
                tools:visibility="visible"
                android:indeterminate="true"
                style="?android:attr/progressBarStyleHorizontal"/>

            <Button
                android:id="@+id/create_account"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_create_account" />

            </LinearLayout>
...
